[project]
name = "gradio-playgrounds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "gradio>=4.44.1",
    "gradio-pdf>=0.0.22",
    "numpy>=2.0.2",
    "ruff>=0.12.3",
]

[dependency-groups]
dev = [
    "ruff>=0.12.3",
]
